--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,4 +15,8 @@
     <dimen name="slidingmenu_offset">60dp</dimen>
     <dimen name="list_padding">10dp</dimen>
     <dimen name="shadow_width">5dp</dimen>
+    
+    <dimen name="pro_marginall">15dp</dimen>
+    <dimen name="pro_margintopbom">15dp</dimen>
+    <dimen name="pro_margindrapadding">10dp</dimen>
 </resources>
