--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -56,4 +56,21 @@
         <item name="android:layout_height">match_parent</item>
     </style>
     
+    <!-- 项目编辑框样式 -->
+    <style name="pro_et_style">
+        <item name="android:background">@null</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">@dimen/activity_14_size</item>
+    </style>
+    
+     <!-- 项目文本框样式 -->
+    <style name="pro_tv_style">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:drawablePadding">@dimen/pro_margindrapadding</item>
+        <item name="android:textColor">@color/blue_pro_txt</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
