--- a/res/layout/view_constuct.xml
+++ b/res/layout/view_constuct.xml
@@ -1,50 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content" >
 
-    
-    <RelativeLayout 
-        
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/pro_marginall" 
-        android:background="@color/gray_pro_bg_title"
-        >
-    
-  
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <TextView
-            style="@style/pro_tv_style"
-            android:textColor="@color/gray_pro_txt"
-            android:id="@+id/textView1"
-            android:drawableLeft="@drawable/pro_jian_w"
-            android:text="桩基基坑" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/gray_pro_bg_title"
+            android:padding="@dimen/pro_marginall" >
 
-        <TextView
-            android:id="@+id/textView1"
-            style="@style/pro_tv_style"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:drawableRight="@drawable/pro_jian_r"
-            android:text="消防景观/绿化"
-            android:textColor="@color/gray_pro_txt" />
-    
-   </RelativeLayout> 
-    
-    
+            <TextView
+                android:id="@+id/textView1"
+                style="@style/pro_tv_style"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/pro_jian_l"
+                android:text="桩基基坑"
+                android:textColor="@color/gray_pro_txt" />
 
-    <GridView
-        android:background="@color/gray_pro_bg_photo"
-        android:id="@+id/gridView1"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:numColumns="3" >
-    </GridView>
+            <TextView
+                android:id="@+id/textView1"
+                style="@style/pro_tv_style"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:drawableRight="@drawable/pro_jian_r"
+                android:text="消防景观/绿化"
+                android:textColor="@color/gray_pro_txt" />
+        </RelativeLayout>
 
-  
-     
+        <GridView
+            android:id="@+id/gridView1"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/gray_pro_bg_photo"
+            android:numColumns="3" >
+        </GridView>
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
