--- a/res/layout/view_fitment.xml
+++ b/res/layout/view_fitment.xml
@@ -1,87 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content" >
 
-    
-    <RelativeLayout 
-        
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/pro_marginall" 
-        android:background="@color/gray_pro_bg_title"
-        >
-    
-  
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <TextView
-            style="@style/pro_tv_style"
-            android:textColor="@color/gray_pro_txt"
-            android:id="@+id/textView1"
-            android:drawableLeft="@drawable/pro_jian_w"
-            android:text="消防景观/绿化" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/gray_pro_bg_title"
+            android:padding="@dimen/pro_marginall" >
 
-    
-   </RelativeLayout> 
-    
-    
+            <TextView
+                android:id="@+id/textView1"
+                style="@style/pro_tv_style"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/pro_jian_l"
+                android:text="消防景观/绿化"
+                android:textColor="@color/gray_pro_txt" />
+        </RelativeLayout>
 
-    <GridView
-        android:background="@color/gray_pro_bg_photo"
-        android:id="@+id/gridView1"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:numColumns="3" >
-    </GridView>
+        <GridView
+            android:id="@+id/gridView1"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/gray_pro_bg_photo"
+            android:numColumns="3" >
+        </GridView>
 
-  <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/pro_marginall" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/pro_marginall" >
 
-        <TextView
-            style="@style/pro_tv_style"
-            android:id="@+id/tv_fitmemtweak"
-            android:drawableRight="@drawable/pro_jian_r"
-            android:text="弱电安装" />
+            <TextView
+                android:id="@+id/tv_fitmemtweak"
+                style="@style/pro_tv_style"
+                android:drawableRight="@drawable/pro_jian_r"
+                android:text="弱电安装" />
 
-		  <View
-            android:layout_marginTop="@dimen/pro_margintopbom"
-            android:layout_marginBottom="@dimen/pro_margintopbom"
-            style="@style/view_line"
-            android:background="@color/black" />
-		  
-		   <TextView
-            style="@style/pro_tv_style"
-            android:id="@+id/tv_fitmentcondition"
-            android:drawableRight="@drawable/pro_jian_r"
-            android:text="装修情况" />
+            <View
+                style="@style/view_line"
+                android:layout_marginBottom="@dimen/pro_margintopbom"
+                android:layout_marginTop="@dimen/pro_margintopbom"
+                android:background="@color/black" />
 
-		  <View
-            android:layout_marginTop="@dimen/pro_margintopbom"
-            android:layout_marginBottom="@dimen/pro_margintopbom"
-            style="@style/view_line"
-            android:background="@color/black" />
-		  
-		    <TextView
-            style="@style/pro_tv_style"
-            android:id="@+id/tv_fitmentstage"
-            android:drawableRight="@drawable/pro_jian_r"
-            android:text="装修阶段" />
+            <TextView
+                android:id="@+id/tv_fitmentcondition"
+                style="@style/pro_tv_style"
+                android:drawableRight="@drawable/pro_jian_r"
+                android:text="装修情况" />
 
-		  <View
-            android:layout_marginTop="@dimen/pro_margintopbom"
-            android:layout_marginBottom="@dimen/pro_margintopbom"
-            style="@style/view_line"
-            android:background="@color/black" />
-		  
-		
+            <View
+                style="@style/view_line"
+                android:layout_marginBottom="@dimen/pro_margintopbom"
+                android:layout_marginTop="@dimen/pro_margintopbom"
+                android:background="@color/black" />
+
+            <TextView
+                android:id="@+id/tv_fitmentstage"
+                style="@style/pro_tv_style"
+                android:drawableRight="@drawable/pro_jian_r"
+                android:text="装修阶段" />
+
+            <View
+                style="@style/view_line"
+                android:layout_marginBottom="@dimen/pro_margintopbom"
+                android:layout_marginTop="@dimen/pro_margintopbom"
+                android:background="@color/black" />
+        </LinearLayout>
     </LinearLayout>
-    
-  
-     
 
-</LinearLayout>
+</ScrollView>
