--- a/res/layout/activity_searchpro.xml
+++ b/res/layout/activity_searchpro.xml
@@ -2,6 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="#ffffff">
 
+    <ListView
+        android:id="@+id/lv_searchmenu"
+        android:layout_width="wrap_content"
+        android:layout_height="244dp"
+        android:background="@color/white"
+        android:dividerHeight="10dp"
+        android:listSelector="@android:color/transparent"
+        android:paddingBottom="@dimen/pro_item_pall" >
+</ListView>
+     
+    <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        
+        <ImageView 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/seach_menu_basemap"
+            />
+
+        <Button
+            android:id="@+id/bt_seach_advanced"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:onClick="onClick"
+            android:background="@drawable/seach_advanced_button" />
+
+          <Button
+              android:id="@+id/bt_seach_voice"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentLeft="true"
+              android:layout_centerVertical="true"
+              android:layout_marginLeft="44dp"
+              android:onClick="onClick"
+              android:background="@drawable/seach_voice_button"
+               />
+
+          <Button
+              android:id="@+id/bt_seach_map"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignBottom="@+id/bt_seach_advanced"
+              android:layout_alignParentRight="true"
+              android:layout_marginRight="22dp"
+              android:layout_marginTop="10dp"
+              android:onClick="onClick"
+              android:background="@drawable/seach_map_button" />
+          
+    </RelativeLayout>
+   
+   
+    
 </LinearLayout>
