--- a/res/layout/activity_projectdetial.xml
+++ b/res/layout/activity_projectdetial.xml
@@ -24,7 +24,7 @@
 
         <TextView
             android:layout_centerVertical="true"
-            android:id="@+id/textView2"
+            android:id="@+id/tv_stagechildname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content" >
 
         <LinearLayout
+            android:id="@+id/layout_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
