--- a/res/layout/activity_allpro.xml
+++ b/res/layout/activity_allpro.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_proall_bg"
     android:orientation="vertical" >
 
-    <ListView
+    <com.zhongji.collection.widget.RTPullListView
         android:paddingBottom="@dimen/pro_item_pall"
         android:divider="@color/gray_proall_bg"
         android:dividerHeight="10dp"
         android:listSelector="@android:color/transparent"
-        android:background="@color/gray_proall_bg"
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-    </ListView>
+    </com.zhongji.collection.widget.RTPullListView>
 
 </LinearLayout>
