--- a/res/layout/base_layout_top.xml
+++ b/res/layout/base_layout_top.xml
@@ -8,9 +8,10 @@
     android:paddingRight="10dp" >
 
     <TextView
+        android:layout_centerInParent="true"
         android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:gravity="center"
         android:text="标题"
         android:textColor="@color/white"
